--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.43.7",
     "react-icons": "^4.8.0",
     "react-is": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9",
     "tailwind-merge": "^1.10.0"
