feat: add basic dropdown search

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@dicebear/collection": "^6.0.2",
     "@dicebear/core": "^6.0.2",
     "@headlessui/react": "^1.7.13",
+    "algoliasearch": "^4.17.0",
     "clsx": "^1.2.1",
     "firebase": "^9.18.0",
     "flowbite": "^1.6.4",
@@ -32,6 +33,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.43.7",
     "react-icons": "^4.8.0",
+    "react-instantsearch-hooks-web": "^6.42.1",
     "react-is": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-toastify": "^9.1.2",
