--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-instantsearch-hooks-web": "^6.42.1",
     "react-is": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
+    "react-pro-sidebar": "^1.0.0",
     "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9",
     "tailwind-merge": "^1.10.0"
