feat: all minor changes

--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "firebase": "^9.18.0",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
+    "moment": "^2.29.4",
     "next": "^13.2.4",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.43.7",
+    "react-hooks-responsive": "^0.2.1",
     "react-icons": "^4.8.0",
     "react-instantsearch-hooks-web": "^6.42.1",
     "react-is": "^18.2.0",
