--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "wamirii"
-  }
+    "default": "wamirii",
+    "staging": "wamirii-staging"
+  },
+  "targets": {},
+  "etags": {}
 }
