--- a/functions/package.json
+++ b/functions/package.json
@@ -14,12 +14,12 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^11.7.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-admin": "^11.5.0",
+    "firebase-functions": "^4.2.0"
   },
   "devDependencies": {
-    "firebase-functions-test": "^3.0.0",
-    "typescript": "^4.9.0"
+    "typescript": "^4.9.0",
+    "firebase-functions-test": "^3.0.0"
   },
   "private": true
 }
