--- a/firebase.json
+++ b/firebase.json
@@ -23,7 +23,7 @@
   },
   "functions": [
     {
-      "source": "../wamirii_functions",
+      "source": "wamirii_functions",
       "codebase": "default",
       "ignore": [
         "node_modules",
