--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@dicebear/collection": "^6.0.2",
     "@dicebear/core": "^6.0.2",
     "@headlessui/react": "^1.7.13",
+    "@nivo/bar": "^0.83.0",
+    "@nivo/core": "^0.83.0",
+    "@nivo/radial-bar": "^0.83.0",
     "@vercel/analytics": "^0.1.11",
     "algoliasearch": "^4.17.0",
     "clsx": "^1.2.1",
