--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nivo/bar": "^0.83.0",
     "@nivo/core": "^0.83.0",
     "@nivo/radial-bar": "^0.83.0",
+    "@szhsin/react-menu": "^3.5.3",
     "@vercel/analytics": "^0.1.11",
     "algoliasearch": "^4.17.0",
     "clsx": "^1.2.1",
