--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-select": "^5.7.3",
     "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9",
-    "tailwind-merge": "^1.10.0"
+    "tailwind-merge": "^1.10.0",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.3.0",
