chore: add spellings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,8 @@
     "firebaseapp",
     "Firestore",
     "Highcharts",
+    "toastify",
+    "usehooks",
     "wamirii"
   ],
   "typescript.tsdk": "node_modules/typescript/lib",
