--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-pro-sidebar": "^1.0.0",
     "react-select": "^5.7.3",
+    "react-social-login-buttons": "^3.9.1",
     "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9",
     "tailwind-merge": "^1.10.0",
